kubernetes/monitoring/prometheus_ingress_with_basic_auth_traefik_v2.11.yaml
# START BASIC AUTH
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth-middleware
spec:
  basicAuth:
    removeHeader: true
    secret: basic-auth
---
# END BASIC AUTH
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: prometheus-ingress
    app.kubernetes.io/part-of: prometheus
  name: prometheus-ingress
  # For basic auth
  annotations:
    # The syntax of default-basic-auth-middleware is following:
    # default = namespace
    # basic-auth-middleware = middleware name
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-basic-auth-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus.example.com
      http: &backend
        paths:
          - backend:
              service:
                name: prometheus-server
                port:
                  #name: http
                  number: 80
            path: /
            pathType: Prefix
